--- a/public/standalone.html
+++ b/public/standalone.html
@@ -7,6 +7,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
+        html { height: 100%; width: 100%; }
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: #f8f9fa;
@@ -16,10 +17,14 @@
             -webkit-touch-callout: none;
             -webkit-tap-highlight-color: transparent;
             touch-action: manipulation;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
         }
         .container {
-            max-width: 480px;
-            margin: 0 auto;
+            width: 100%;
+            margin: 0;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -76,7 +81,7 @@
             padding: 16px; z-index: 100;
         }
         .cart-summary {
-            max-width: 480px; margin: 0 auto;
+            width: 100%; margin: 0;
             display: flex; align-items: center;
             justify-content: space-between; gap: 16px;
         }
