--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
                     <span class="cart-count">0 items</span>
                 </div>
                 <button id="checkout-btn" class="checkout-btn" onclick="checkout()" disabled>
-                    Place Order
+                    Order
                 </button>
             </div>
         </footer>
